<resources>
    <!--<string name="app_name">Consumer\nPowerSaver</string>-->
    <string name="app_name">CYC</string>
    <string name="sample_name">Consumer Power Saver</string>
    <!--<string name="mobile_no_email_id">Mobile No/Email ID</string>-->
    <string name="mobile_no_email_id">Mobile No</string>
    <string name="password">Password</string>
    <string name="reset">Reset</string>
    <string name="sign_in">Sign In</string>
    <string name="new_registration">New Registration ?</string>
    <string name="guest_user">Guest User ?</string>
    <string name="user_id_error">Please Enter Mobile No/ Email ID</string>
    <string name="password_error">Please Enter your password</string>
    <string name="first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>


    <string name="cpc">Previous Bill Details</string>
    <string name="month_type">Month</string>
    <string name="date">Date</string>
    <string name="hint_present_date">Present Date</string>
    <string name="hint_previous_date">Previous Date</string>
    <string name="reading">Reading</string>
    <string name="present">Present</string>
    <string name="previous">Previous</string>
    <string name="total_units">Units</string>
    <string name="category">Category (CAT)</string>
    <string name="phase">Phase (PH)</string>
    <string name="phase_hint">1 or 3</string>
    <string name="load">Contracted Load</string>
    <string name="load_hint">Load (in KW)</string>
    <string name="multi_factor">Multi. Factor (MF)</string>
    <string name="multi_factor_hint">MF</string>
    <string name="total_days">Days</string>
    <string name="total_amount">Energy Charged\n(Amount)</string>

    <string-array name="meter_category_array"> <!-- order is important - used in code -->
        <item>1A/B DOMESTIC</item>
        <item>2A NON-DOMESTIC/COMM</item>
    </string-array>

    <string-array name="meter_phase_array"> <!-- order is important - used in code -->
        <item>1 - Single Phase</item>
        <item>3 - Three Phase</item>
    </string-array>

    <string name="billing_details_submit">Your Present Bill History</string>
    <string name="from_date">From Date</string>
    <string name="TO_date">To Date</string>
    <string name="from_reading">From Reading</string>
    <string name="To_reading">TO Reading</string>
    <string name="Total_units">Total Units</string>
    <string name="Total_avg_units">Average Units Per Day</string>

    <string name="current_day_reading">Your Present Bill Status</string>

    <string name="curr_reading">Present Reading</string>
    <string name="curr_date">Present Date</string>
    <string name="units_genrate">No. of Units</string>
    <string name="days_countfrom_bii_date">Days Count from Billing Date</string>
    <string name="avg_amount_charged">Bill Amount</string>
    <string name="avg_units_per_day">Average Units Per Day</string>
    <string name="day_left_for_next_billing">No. of days left for Billing</string>

    <string name="back">Back</string>
    <string name="current_reading">Current Reading</string>
    <string name="previous_reading">Previous Reading</string>
    <string name="collan">:</string>
    <string name="rupees">Rs.</string>
    <string name="present_reading_error">Please Enter Present Meter Reading</string>
    <string name="previous_reading_error">Please Enter Previous Meter Reading</string>
    <string name="contracted_load_error">Please Enter Load Value</string>
    <string name="multi_factor_error">Please Enter MF Value</string>
    <string name="days">Days</string>
    <string name="bill_duration">Bill Duration</string>
    <string name="average_units_per_day">Avg Unit per Day</string>
    <string name="oops_your_bill_going_to_be_a_burden_on_you">Oops! your bill going to be a burden on you..!\nSimple changes in your usage will help you to Control your Consumption!\nWould you like to control ?</string>
    <string name="kwh">KWH</string>
    <string name="amount">Amount</string>
    <string name="message">Message</string>
    <string name="control">Control</string>
    <string name="ok">Ok</string>
    <string name="alert">ALERT</string>
    <string name="name">Enter Your Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="mail">e-mail ID</string>
    <string name="hint_confim">Confim Password</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_mobile">Enter your Mobile Number</string>
    <string name="err_msg_email">Enter your Email Address</string>
    <string name="err_msg_password">Enter your Password</string>
    <string name="err_msg_con_password">Enter your Confirm Password</string>

    <string name="user_name">User Name/Mobile Number</string>
    <string name="guest">Guest</string>
    <string name="for_new_regn">For New Registration ?</string>
    <string name="success_register">Registered Successfully</string>
    <string name="password_match_erro">Password doesn\'t match</string>
    <string name="under_development">Still under Development</string>
    <string name="cps">CYC</string>
    <string name="title_activity_main">CYC</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="NO_IMAGE">No Image Available</string>
    <string name="pick_item">Pick Item</string>
    <string name="or">OR</string>
    <string name="add_item_details">Add Item Details</string>
    <string name="name_label">Name</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="power_watt">Watts</string>
    <string name="usage_time">Usage(hrs)</string>
    <string name="usage_days">Usage Days</string>
    <string name="usage_from">Usage from</string>
    <string name="usage_till">Usage Till</string>
    <string name="watts">Watts</string>
    <string name="time">Usage(hrs)</string>
    <string name="x">X</string>
    <string name="appliances_added">Appliances Wise Usage</string>
    <string name="no_appliances">No Appliances Added</string>
    <string name="total_units_consumed">Total Units Consumed</string>
    <string name="total_units_label">Total Units</string>
    <string name="grand_total"><u>Grand Total</u></string>
    <string name="units_per_day">Units per Day</string>
    <string name="add">Add +</string>
    <string name="m_p_s_p_d_c_l">M P S P D C L</string>
    <string name="electricity">ELECTRICITY</string>
    <string name="bill_cum_notice">BILL-CUM NOTICE</string>
    <string name="line">--------------------------------------------------------</string>
    <string name="scan">Scan</string>
    <string name="maker">Make</string>
    <string name="label_units">Units</string>
    <string name="your_current_average_units_per_day_is">Your Current Average Units per day is</string>
    <string name="check_units_individually_for_appliances_below">Check Units Individually for Appliances below :</string>
    <string name="suggestions_text">CYC Suggestions</string>
    <string name="save">SAVE</string>
    <string name="current_uints">Current Uints</string>
    <string name="total_savings">Total Savings</string>
    <string name="save_upto">Saved Units</string>
    <string name="state">State</string>
    <string name="electricity_board">Electricity Board</string>
    <string name="usc_no">USC No</string>
    <string name="next">Next</string>
    <string name="address">Address</string>
    <string name="rs">\u20B9</string>
    <string name="Rs">\u20B9</string>
    <string name="payment_status">PAYMENT STATUS</string>
    <string name="click_here_for_more_details">Click Here for More Details</string>
    <string name="electricity_bill_cum_notice">ELECTRICITY BILL CUM NOTICE</string>
    <string name="present_reading">Present Reading</string>
    <string name="check">CHECK</string>
    <string name="save_my_consumption">Save my Consumption</string>
    <string name="help">Help ?</string>
    <string name="previous_bill_history">Previous Bill History</string>
    <string name="how">How ?</string>
    <string name="required">Required</string>
    <string name="you_can">You can</string>
    <string name="Internet_Error">Please Check your Internet Connection</string>
    <string name="user_reading_details">Previous Bill</string>
    <string name="present_bill_status">Present Bill Status</string>
    <string name="appliances">Appliances</string>
    <string name="rate_of_unit_details">Rate of Unit Details : </string>
    <string name="amount_rs_unit">Amount(Rs./Unit)</string>
    <string name="_0_50">0-50</string>
    <string name="_51_100">51-100</string>
    <string name="_1_45">1.45</string>
    <string name="_2_60">2.60</string>
    <string name="_0_100">0-100</string>
    <string name="_3_30">3.30</string>
    <string name="_101_200">101-200</string>
    <string name="_4_30">4.30</string>
    <string name="your_bill">Your Bill</string>
    <string name="total">Total</string>
    <string name="_201_300">201-300</string>
    <string name="_0_200">0-200</string>
    <string name="_5">5</string>
    <string name="_7_20">7.20</string>
    <string name="_301_400">301-400</string>
    <string name="history">History</string>
    <string name="no_history_found">No HIstory Found</string>
    <string name="profile_details">Profile Details</string>
    <string name="update">Update</string>
    <string name="update_success">Updated Successfully</string>
    <string name="feedback">Feedback</string>
    <string name="fixed_charges">Fixed Charges</string>
    <string name="share">Share</string>
    <string name="previous_bill_date">Previous Bill Date</string>
</resources>
