<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_10"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:textSize="@dimen/small_text"
        android:textColor="@color/grey"/>

    <Spinner
        android:id="@+id/state_spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_5"
        android:background="@drawable/spinner"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/electricity_board"
        android:textSize="@dimen/small_text"
        android:layout_marginTop="@dimen/margin_10"
        android:textColor="@color/grey"/>

    <Spinner
        android:id="@+id/board_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:gravity="center|top|start"
        android:background="@drawable/edit"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_usc_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5">

        <EditText
            android:id="@+id/input_usc_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usc_no"
            android:inputType="number"
            android:maxLength="10"
            android:digits="0123456789"
            android:textSize="@dimen/text_size"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5">

        <EditText
            android:id="@+id/input_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="textCapSentences"
            android:textSize="@dimen/text_size"
            android:drawableRight="@drawable/refresh"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_5"
        android:background="@drawable/blue_borde"
        android:textColor="@color/dynamic_data_color"
        android:text="@string/next"/>
</LinearLayout>